--- a/.github/workflows/testbuild.yml
+++ b/.github/workflows/testbuild.yml
@@ -1,4 +1,4 @@
-name: Splunk OpenTelemetry CPP CI
+name: Build and test
 
 on:
   push:
@@ -13,7 +13,7 @@ jobs:
       - name: checkout
         uses: actions/checkout@v2
         with:
-          submodules: true
+          submodules: 'recursive'
       - name: install packages
         run: sudo apt install cmake
       - name: build deps
