CI: install curl via apt

--- a/.github/workflows/testbuild.yml
+++ b/.github/workflows/testbuild.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           submodules: 'recursive'
       - name: install packages
-        run: sudo apt install cmake
+        run: sudo apt install cmake libcurl4-openssl-dev
       - name: build deps
         run: |
           mkdir -p $HOME/splunk-otel-cpp
