Add verification tests

--- a/.github/workflows/testbuild.yml
+++ b/.github/workflows/testbuild.yml
@@ -16,6 +16,12 @@ jobs:
           submodules: 'recursive'
       - name: install packages
         run: sudo apt install cmake libcurl4-openssl-dev
+      - name: Spin up collector image
+        run: cd test && docker-compose up -d
+      - name: Wait for collector
+        run: |
+          timeout 30 \
+          bash -c 'while [[ "$(curl -s -o /dev/null -w '{%http_code}'' localhost:13134" != "200" ]]; do sleep 1; done' || false
       - name: build deps
         run: |
           mkdir -p $HOME/splunk-otel-cpp
@@ -28,3 +34,5 @@ jobs:
             -DCMAKE_PREFIX_PATH=$HOME/splunk-otel-cpp \
             ..
           make install
+      - name: run smoke tests
+        run: cd build && make test
