YAML + bash fix

--- a/.github/workflows/testbuild.yml
+++ b/.github/workflows/testbuild.yml
@@ -24,7 +24,7 @@ jobs:
           sleep 10
           curl localhost:13133
           curl -I localhost:13133
-          bash -c 'while [[ "$(curl -s -o /dev/null -w ''{%http_code}'' localhost:13133)" != "200" ]]; do sleep 1; done' || false
+          while [[ "$(curl -s -o /dev/null -w ''{%http_code}'' localhost:13133)" != "200" ]]; do sleep 1; done || false
       - name: build deps
         run: |
           mkdir -p $HOME/splunk-otel-cpp
