Remove debug code, fix typo

--- a/.github/workflows/testbuild.yml
+++ b/.github/workflows/testbuild.yml
@@ -21,10 +21,7 @@ jobs:
       - name: Wait for collector
         timeout-minutes: 1
         run: |
-          sleep 10
-          curl localhost:13133
-          curl -I localhost:13133
-          while [[ "$(curl -s -o /dev/null -w ''{%http_code}'' localhost:13133)" != "200" ]]; do sleep 1; done || false
+          while [[ "$(curl -s -o /dev/null -w ''%{http_code}'' localhost:13133)" != "200" ]]; do sleep 1; done || false
       - name: build deps
         run: |
           mkdir -p $HOME/splunk-otel-cpp
