Add distribution build on Alpine

--- a/.github/workflows/testbuild.yml
+++ b/.github/workflows/testbuild.yml
@@ -26,6 +26,7 @@ jobs:
           cd build
           cmake -DCMAKE_INSTALL_PREFIX=$HOME/splunk-otel-cpp \
             -DCMAKE_PREFIX_PATH=$HOME/splunk-otel-cpp \
+            -DSPLUNK_CPP_WITH_JAEGER_EXPORTER=ON \
             ..
           make install
       - name: Spin up collector image
