Enable Jaeger exporter for the default build.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,9 +8,9 @@ set(PACKAGE_VERSION "0.1.0")
 
 set(CMAKE_CXX_STANDARD 11)
 
-option(SPLUNK_CPP_TESTS "Enable building of tests" ON)
+option(SPLUNK_CPP_TESTS "Enable building of tests" OFF)
 option(SPLUNK_CPP_EXAMPLES "Enable building of examples" ON)
-option(SPLUNK_CPP_WITH_JAEGER_EXPORTER "Enable Jaeger exporter" OFF)
+option(SPLUNK_CPP_WITH_JAEGER_EXPORTER "Enable Jaeger exporter" ON)
 
 find_package(Protobuf REQUIRED)
 find_package(gRPC REQUIRED)
