--- a/.github/workflows/testbuild.yml
+++ b/.github/workflows/testbuild.yml
@@ -27,6 +27,7 @@ jobs:
           cmake -DCMAKE_INSTALL_PREFIX=$HOME/splunk-otel-cpp \
             -DCMAKE_PREFIX_PATH=$HOME/splunk-otel-cpp \
             -DSPLUNK_CPP_WITH_JAEGER_EXPORTER=ON \
+            -DSPLUNK_CPP_TESTS=ON \
             ..
           make install
       - name: Spin up collector image
