--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -70,7 +70,7 @@ jobs:
             opentelemetry-cpp/third_party/opentelemetry-proto/.git
       - name: copy files
         run: |
-          cd ${GITHUB_WORKSPACE}
+          cd $GITHUB_WORKSPACE
           ls -la
           mv splunk-otel-cpp splunk-opentelemetry-cpp
           tar -zcvf splunk-opentelemetry-cpp.tar.gz splunk-opentelemetry-cpp
@@ -78,10 +78,10 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: splunk-opentelemetry-cpp-conan.tar.gz
-          path: ${GITHUB_WORKSPACE}/splunk-opentelemetry-cpp.tar.gz
+          path: $GITHUB_WORKSPACE/splunk-opentelemetry-cpp.tar.gz
       - name: release
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
           name: splunk-opentelemetry-cpp-${GITHUB_REF}-conan.tar.gz
-          path: ${GITHUB_WORKSPACE}/splunk-opentelemetry-cpp.tar.gz
+          path: $GITHUB_WORKSPACE/splunk-opentelemetry-cpp.tar.gz
