--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -70,18 +70,15 @@ jobs:
             opentelemetry-cpp/third_party/nlohmann-json/.git \
             opentelemetry-cpp/third_party/nlohmann-json/third_party \
             opentelemetry-cpp/third_party/opentelemetry-proto/.git
-      - name: archive files
+      - name: prepare tar
         run: |
-          ls -la
           mv splunk-otel-cpp splunk-opentelemetry-cpp
           tar -zcf splunk-opentelemetry-cpp.tar.gz splunk-opentelemetry-cpp
-          pwd
-          ls -la
       - name: upload artifact
         uses: actions/upload-artifact@v2
         with:
-          name: splunk-opentelemetry-cpp-conan.tar.gz
-          path: splunk-opentelemetry-cpp.tar.gz
+          name: splunk-opentelemetry-cpp-conan
+          path: splunk-opentelemetry-cpp
       - name: release
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
