Upgrade to OpenTelemetry 1.0.0, add Conan recipe (#9)
* add conanfile
upgrade to otel-cpp 1.0
clean up deps building

* conan: remove unnecessary options

* conanfile: remove unnecessary import

* update README

* generate conan source artifact

* fix github action name

* debug github actions

* fix github_workspace env var

* use specific path when checking out for conan

* debug github actions

* gh actions: remove unnecessary workspace vars

* github actions: don't upload compressed artifact

* gh actions: test release artifact

* gh actions: compress files before uploading

* update version at conanfile

--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -1,4 +1,4 @@
-name: Linux package
+name: Package
 
 on:
   push:
@@ -50,3 +50,38 @@ jobs:
         with:
           name: splunk-opentelemetry-cpp-linux
           path: docker/output/splunk-opentelemetry-cpp
+  generate-conan-source-artifact:
+    runs-on: ubuntu-20.04
+    steps:
+      - name: checkout
+        uses: actions/checkout@v2
+        with:
+          submodules: 'recursive'
+          path: 'splunk-otel-cpp'
+      - name: prune files
+        run: |
+          cd splunk-otel-cpp
+          rm -rf .git examples httpd internal grpc thrift docker test build_deps.sh \
+            opentelemetry-cpp/.git \
+            opentelemetry-cpp/third_party/benchmark \
+            opentelemetry-cpp/third_party/googletest \
+            opentelemetry-cpp/third_party/ms-gsl \
+            opentelemetry-cpp/third_party/prometheus-cpp \
+            opentelemetry-cpp/third_party/nlohmann-json/.git \
+            opentelemetry-cpp/third_party/nlohmann-json/third_party \
+            opentelemetry-cpp/third_party/opentelemetry-proto/.git
+      - name: prepare tar
+        run: |
+          mv splunk-otel-cpp splunk-opentelemetry-cpp
+          tar -zcf splunk-opentelemetry-cpp.tar.gz splunk-opentelemetry-cpp
+      - name: upload artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: splunk-opentelemetry-cpp-conan
+          path: splunk-opentelemetry-cpp.tar.gz
+      - name: release
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          name: splunk-opentelemetry-cpp-${GITHUB_REF}-conan.tar.gz
+          path: splunk-opentelemetry-cpp.tar.gz
