fix release action

--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -79,9 +79,14 @@ jobs:
         with:
           name: splunk-opentelemetry-cpp-conan
           path: splunk-opentelemetry-cpp.tar.gz
+      - name: prepare-release-file
+        if: startsWith(github.ref, 'refs/tags/')
+        run: |
+          mv splunk-opentelemetry-cpp.tar.gz splunk-opentelemetry-cpp-$GITHUB_REF.tar.gz
       - name: release
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
-          name: splunk-opentelemetry-cpp-${GITHUB_REF}-conan.tar.gz
-          path: splunk-opentelemetry-cpp.tar.gz
+          draft: true
+          files: |
+            splunk-opentelemetry-cpp-$GITHUB_REF.tar.gz
