--- a/.github/workflows/testbuild.yml
+++ b/.github/workflows/testbuild.yml
@@ -7,7 +7,7 @@ on:
     branches: [ main ]
 
 jobs:
-  build-test:
+  build-test-linux:
     runs-on: ubuntu-20.04
     steps:
       - name: checkout
