--- a/.github/workflows/testbuild.yml
+++ b/.github/workflows/testbuild.yml
@@ -33,11 +33,13 @@ jobs:
             ..
           make install
       - name: Spin up collector image
-        run: cd test && docker-compose up -d
+        run: |
+          cd test 
+          chmod 777 data/trace.json
+          docker-compose up -d
       - name: Wait for collector
         timeout-minutes: 1
         run: |
-          chmod 777 data/trace.json
           while [[ "$(curl localhost:13133)" != "200" ]]; do sleep 1; done || false
       - name: run smoke tests
         run: cd build && make test
