--- a/.github/workflows/testbuild.yml
+++ b/.github/workflows/testbuild.yml
@@ -40,6 +40,6 @@ jobs:
       - name: Wait for collector
         timeout-minutes: 1
         run: |
-          while [[ "$(curl localhost:13133)" != "200" ]]; do sleep 1; done || false
+          while [[ "$(curl -s -o /dev/null -w ''%{http_code}'' localhost:13133)" != "200" ]]; do sleep 1; done || false
       - name: run smoke tests
         run: cd build && make test
